console overflow fix

--- a/static/css/code_editor.css
+++ b/static/css/code_editor.css
@@ -73,7 +73,22 @@ main {
   height: calc(100% - var(--editor-label-height) - 8px);
 }
 
-/* others */
-#console-output {
+#console-output-wrapper {
   overflow-y: auto;
+  position: relative;
+}
+
+/*
+  When a pane's height is too large, the page layout messes up.
+  Create a wrapping div with `position: relative`,
+  then add this class to the element.
+  This bug also occurred with `.CodeMirror`
+*/
+.pane-overflow-fix {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100%;
 }
